--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.11.1",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@react-pdf/renderer": "^4.3.0",
     "@sentry/nextjs": "^9.35.0",
     "@supabase/supabase-js": "^2.50.3",
